# lawnmover

./: .gitignore  README.md
src/lawnmover/: package.xml  setup.cfg  setup.py
src/lawnmover/config/: controllers.yaml  display.rviz
src/lawnmover/launch/: display.launch.py  gazebo.launch.py  simulation.launch.py
src/lawnmover/meshes/: LiDAR_1.stl  base_link.stl  battery_1.stl  blade_1.stl  blade_motor_1.stl  electronic_board_cover_1.stl  emergency_stop_button_1.stl  front_tyre_1.stl  front_tyre_2.stl  imu_1.stl  motherboard_1.stl  odometer_1.stl  odometer_2.stl  odometer_cover_left_1.stl  odometer_cover_right_1.stl  rear_tyre_1.stl  rear_tyre_2.stl  rear_tyre_motor_1.stl  rear_tyre_motor_2.stl  switch_button_1.stl  top_body_1.stl
src/lawnmover/urdf/: Robotic.gazebo  Robotic.ros2control  Robotic.urdf  Robotic.xacro  materials.xacro  model.sdf
